# ros-learning

./: .gitignore  LICENSE  README.md
ws00_helloworld/src/pkg01_helloworld_cpp/: package.xml
ws00_helloworld/src/pkg01_helloworld_cpp/src/: helloworld.cpp
ws01_plumbing/src/base_interfaces_demo/: CMakeLists.txt  package.xml
ws01_plumbing/src/cpp01_topic/: CMakeLists.txt  package.xml
ws01_plumbing/src/cpp01_topic/src/: demo01_talker_str.cpp  demo02_listener_str.cpp  demo03_talker_stu.cpp  demo04_listener_stu.cpp
ws01_plumbing/src/cpp02_service/: CMakeLists.txt  package.xml
ws01_plumbing/src/cpp02_service/src/: demo01_server.cpp  demo02_client.cpp
ws01_plumbing/src/cpp03_action/: CMakeLists.txt  package.xml
ws01_plumbing/src/cpp03_action/src/: demo01_action_server.cpp  demo02_action_client.cpp
ws01_plumbing/src/cpp04_param/: CMakeLists.txt  package.xml
ws01_plumbing/src/cpp04_param/src/: demo01_param_server.cpp  demo02_param_client.cpp
ws01_plumbing/src/timer_api/: CMakeLists.txt  package.xml
ws01_plumbing/src/timer_api/src/: duration_api.cpp  rate_api.cpp  time_api.cpp  time_duration_calc.cpp
ws02_tools/my_bag/: metadata.yaml  my_bag_0.db3
ws02_tools/src/cpp01_launch/: CMakeLists.txt  package.xml
ws02_tools/src/cpp01_launch/config/: t2.yaml
ws02_tools/src/cpp01_launch/launch/: py00_base.launch.py
ws02_tools/src/cpp01_launch/launch/py/: py01_node.launch.py  py02_cmd.launch.py  py03_args.launch.py  py04_include.launch.py  py05_group.launch.py  py06_event.launch.py
ws02_tools/src/cpp02_rosbag/: CMakeLists.txt  package.xml
ws02_tools/src/cpp02_rosbag/src/: demo01_writer.cpp  demo02_reader.cpp
ws07_exercise/src/base_interfaces_demo/: CMakeLists.txt  package.xml
ws07_exercise/src/base_interfaces_demo/action/: Nav.action
ws07_exercise/src/base_interfaces_demo/srv/: Distance.srv
ws07_exercise/src/exe01_topic/: CMakeLists.txt  package.xml
ws07_exercise/src/exe01_topic/launch/: py01_mirror_control.launch.py
ws07_exercise/src/exe01_topic/src/: ex01_mirror_control.cpp  ex02_mirror_control.cpp
ws07_exercise/src/exe02_service/: CMakeLists.txt  package.xml
ws07_exercise/src/exe02_service/launch/: py01_distance_server.launch.py  py02_distance_client.launch.py
ws07_exercise/src/exe02_service/src/: ex01_distance_server.cpp  ex02_distance_client.cpp
ws07_exercise/src/exe03_action/: CMakeLists.txt  package.xml
ws07_exercise/src/exe03_action/launch/: py01_nav.launch.py
ws07_exercise/src/exe03_action/src/: ex01_nav_server.cpp  ex02_nav_client.cpp
ws07_exercise/src/exe04_param/: CMakeLists.txt  package.xml
ws07_exercise/src/exe04_param/launch/: py01_param.launch.py
ws07_exercise/src/exe04_param/src/: ex01_param_client.cpp
